enter pasword css
text, background, password prompt, submit button

--- a/Website/index.css
+++ b/Website/index.css
@@ -3,35 +3,47 @@
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-   position: absolute;
+  position: absolute;
   overflow: auto;
   margin: auto;
-  top: 0; left: 0; bottom: 0; right: 0;
-  width: 50%
-  
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 50%;
 }
 .container {
   position: relative;
 }
 .centerbelow {
-	  display: block;
-	  margin-left: auto;
-	  margin-right: auto;
-	  width: 50%;
-	  height: 5%;
-	  position: absolute;
-	  overflow: auto;
-	  margin: auto;
-	  top: 0; left: 0; bottom: 0; right: 0;
-
-
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  height: 5%;
+  position: absolute;
+  overflow: auto;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
-
-/* #passForm{ */
-  /* height: 60px; */
-  /* position: absolute; */
-  /* overflow: auto; */
-  /* margin: auto; */
-  /* top: 0; left: 0; bottom: 0; right: 0; */
-  /* width: 50% */
-	/* } */
+.welcomeMessage {
+  display: block;
+  position: relative;
+  width: 350px;
+  text-align: center;
+  font-size: medium;
+  font-family: sans-serif;
+  border: 1px;
+  /* border-radius: 30%; */
+  background-color: aliceblue;
+}
+.welcomeMessage button {
+  background-color: grey;
+  height: 20px;
+  width: 70px;
+  color: white;
+  text-align: center;
+}
